<resources>
    <string name="app_name">Room Database</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="room_database">Room Database</string>
    <string name="add_user">Add User</string>
    <string name="all_users">All Users</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_eneter_last_name">Please enter last name</string>
    <string name="database_name">Gohel-Infotech</string>
    <string name="user_added">User added</string>
    <string name="email">Email</string>
</resources>